manifests/deploy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
      - name: postgresdb
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: database
            mountPath: /var/lib/postgresql
            subPath: backup
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: pvc-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgresdb
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresdb
